# routes/api.js
@@ -1,0 +1,5 @@
+const router = require('express').Router();
+
+router.use('/books', require('./book.js'));
+
+module.exports = router;
