# swagger.js
@@ -1,6 +1,6 @@
 const swaggerAutogen = require('swagger-autogen')();
 const outputFile = './swagger.json';
-const endpointsFiles = ['./routes/book.js'];
+const endpointsFiles = ['./routes/api.js'];
 const port = process.env.PORT || 3000;
 const url = process.env.URL || 'localhost';
 
@@ -10,9 +10,8 @@ const doc = {
     title: 'Book Tracking API',
     description: 'A RESTful API for the book you have read.',
   },
-  host: `cse341-project2-0s3y.onrender.com`,
-  basePath: '/books',
-  schemes: ['https'],
+  basePath: '/api',
+  schemes: ['https', 'http'],
 };
 
 swaggerAutogen(outputFile, endpointsFiles, doc);
