# swagger.json
@@ -5,13 +5,14 @@
     "title": "Book Tracking API",
     "description": "A RESTful API for the book you have read."
   },
-  "host": "cse341-project2-0s3y.onrender.com",
-  "basePath": "/books",
+  "host": "localhost:3000",
+  "basePath": "/api",
   "schemes": [
-    "https"
+    "https",
+    "http"
   ],
   "paths": {
-    "/": {
+    "/books/": {
       "get": {
         "tags": [
           "Books"
@@ -69,11 +70,14 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
-    "/{id}": {
+    "/books/{id}": {
       "get": {
         "tags": [
           "Books"
@@ -93,6 +97,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -143,11 +150,14 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "204": {
+            "description": "No Content"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -165,11 +175,14 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "204": {
+            "description": "No Content"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
